--- a/src/css/home-style.css
+++ b/src/css/home-style.css
@@ -539,23 +539,14 @@
             transform: scale(1.15);
         }
 
-        .carousel-inner{
-            width: 1519px;
-            height: 469px;
-        }
         .carousel-item{
             margin-top: 0px !important;
         }
         .slide{
             padding: 0px !important;
         }
-        .carousel-item img{
-            height: 496px;
-            width: 100%;
-        }
         .d-block{
             width: 100%;
-            height: 100%;
             opacity: 0.6;
         }
         .carousel-caption{
@@ -646,9 +637,12 @@
         .latest.related .los .box {
             width: 14.28%
         }
+        .slide{
+            display: none;
+        }
         @media only screen and (max-width: 767px) {
             .slide {
-                display: none;
+                display: block;
             }
         }
         .minwidth .latest .los .box {
