--- a/header & footer/header.css
+++ b/header & footer/header.css
@@ -522,6 +522,9 @@ input[type=checkbox]:checked~#menu-menu {
         background: rgba(30, 33, 41)
     }
 }
+.mobile{
+    display: none;
+}
 @media only screen and (max-width:770px) {
     #main-menu .centernav .logo {
         float: left;
@@ -530,6 +533,12 @@ input[type=checkbox]:checked~#menu-menu {
         max-width: 130px
     }
     @media only screen and (max-width:690px) {
+        .pc{
+            display: none;
+        }
+        .mobile{
+            display: block;
+        }
         #main-menu {
             height: 60px
         }
