--- a/header & footer/header.css
+++ b/header & footer/header.css
@@ -3,7 +3,7 @@ body {
     color: #8e95a5 !important;
     font-size: 14px;
     /* background: #1e2129; */
-    background-color: #0d0d0d !important;
+    background-color: #1A1A1A !important;
     font-family: Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif !important;
     margin: 0 auto;
     padding: 0;
