--- a/phim detail/details.css
+++ b/phim detail/details.css
@@ -3,7 +3,7 @@ body {
     color: #8e95a5 !important;
     font-size: 14px;
     /* background: #1e2129; */
-    background-color: #1A1A1A !important;
+    background-color: #121212 !important;
     font-family: Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif !important;
     margin: 0 auto;
     padding: 0;
@@ -1318,7 +1318,7 @@ i.qua {
 
 .mvinfo .entry-author {
     font-weight: 700;
-    color: #fbb829
+    color: #ED6868;
 }
 
 .mvinfo .entry-author .fn {
@@ -1328,7 +1328,7 @@ i.qua {
 .infodb .entry-content {
     line-height: 160%;
     font-size: 14px;
-    color: #F9FBFF; 
+    color: #d1d1d1; 
 }
 
 .infodb .entry-content .data {
