--- a/phim detail/details.css
+++ b/phim detail/details.css
@@ -2693,8 +2693,8 @@ ul.live-search_main {
 #footer {
     overflow: hidden;
     font-size: 14px;
-    background: #13151a;
-    color: #a1a1a1;
+    background: #262626;
+    color: #8e95a5;
     margin-top: 25px;
     text-align: center;
 }
