--- a/header & footer/header.css
+++ b/header & footer/header.css
@@ -680,8 +680,8 @@ input[type=checkbox]:checked~#menu-menu {
 #footer {
     overflow: hidden;
     font-size: 14px;
-    background: #13151a;
-    color: #a1a1a1;
+    background: #262626;
+    color: #8e95a5;
     margin-top: 25px;
     text-align: center;
 }
